// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload" style="width: 30px; height: 30px;"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`file message should be reactive 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__mask">
        <div class="van-loading van-loading--circular van-uploader__loading"><span class="van-loading__spinner van-loading__spinner--circular"><svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
        <div class="van-uploader__mask-message">2</div>
      </div>
    </div>
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img" style="object-fit: contain;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`max-count prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
  </div>
</div>
`;

exports[`preview-cover slot 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
        <div class="van-uploader__preview-cover">url: https://img01.yzcdn.cn/vant/cat.jpeg, index: 0</div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
        <div class="van-uploader__preview-cover">url: https://img01.yzcdn.cn/vant/cat.jpeg, index: 1</div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`preview-size prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview" style="">
      <div class="van-image van-uploader__preview-image" style="width: 30px; height: 30px;"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__upload" style="width: 30px; height: 30px;"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file"><i class="van-icon van-icon-description van-uploader__file-icon">
          <!----></i>
        <div class="van-uploader__file-name van-ellipsis">https://img01.yzcdn.cn/vant/test.pdf</div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file"><i class="van-icon van-icon-description van-uploader__file-icon">
          <!----></i>
        <div class="van-uploader__file-name van-ellipsis">test.pdf</div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo van-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="van-uploader__preview-delete"><i class="van-icon van-icon-cross van-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`render upload-text 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload"><i class="van-icon van-icon-photograph van-uploader__upload-icon">
        <!----></i><span class="van-uploader__upload-text">Text</span><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`upload-icon prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload"><i class="van-icon van-icon-add van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;
